--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SamWeb 1.10</title>
+    <title>SamWeb 1.16</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Times+New+Roman&display=swap');
@@ -32,6 +32,21 @@
             color: white;
             font-size: 12px;
         }
+        #recenterButton {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            background-color: rgba(255, 255, 255, 0.2);
+            color: white;
+            border: 1px solid white;
+            cursor: pointer;
+            font-family: 'Times New Roman', serif;
+            font-size: 16px;
+        }
+        #recenterButton:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+        }
     </style>
 </head>
 <body>
@@ -42,12 +57,14 @@
         <p>⚙️ Scroll: Zoom</p>
         <p>👆 Click node: Open project</p>
     </div>
-    <div id="versionInfo">v1.10</div>
+    <div id="versionInfo">v1.16</div>
+    <button id="recenterButton">Recenter</button>
     <script>
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x000000);
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.z = 20;
+        camera.position.set(10, 10, 10);
+        camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -57,25 +74,103 @@
         const structure = new THREE.Group();
         scene.add(structure);
 
-        const polyhedronGeometry = new THREE.IcosahedronGeometry(5, 2);
-        const polyhedronMaterial = new THREE.LineBasicMaterial({ color: 0xffffff, linewidth: 2 });
-        const polyhedron = new THREE.LineSegments(new THREE.EdgesGeometry(polyhedronGeometry), polyhedronMaterial);
-        structure.add(polyhedron);
+        // Create infinite white axes
+        const axisLength = 1000;
+        const axisColor = 0xFFFFFF;
 
+        const xAxis = new THREE.Line(
+            new THREE.BufferGeometry().setFromPoints([
+                new THREE.Vector3(-axisLength, 0, 0),
+                new THREE.Vector3(axisLength, 0, 0)
+            ]),
+            new THREE.LineBasicMaterial({ color: axisColor })
+        );
+        structure.add(xAxis);
+
+        const yAxis = new THREE.Line(
+            new THREE.BufferGeometry().setFromPoints([
+                new THREE.Vector3(0, -axisLength, 0),
+                new THREE.Vector3(0, axisLength, 0)
+            ]),
+            new THREE.LineBasicMaterial({ color: axisColor })
+        );
+        structure.add(yAxis);
+
+        const zAxis = new THREE.Line(
+            new THREE.BufferGeometry().setFromPoints([
+                new THREE.Vector3(0, 0, -axisLength),
+                new THREE.Vector3(0, 0, axisLength)
+            ]),
+            new THREE.LineBasicMaterial({ color: axisColor })
+        );
+        structure.add(zAxis);
+
+        // Add axis labels
+        const addLabel = (text, position) => {
+            const canvas = document.createElement('canvas');
+            const context = canvas.getContext('2d');
+            canvas.width = 128;
+            canvas.height = a64;
+            context.fillStyle = 'white';
+            context.font = 'bold 48px Arial';
+            context.fillText(text, 0, 48);
+            const texture = new THREE.CanvasTexture(canvas);
+            const material = new THREE.SpriteMaterial({ map: texture });
+            const sprite = new THREE.Sprite(material);
+            sprite.position.copy(position);
+            sprite.scale.set(1, 0.5, 1);
+            structure.add(sprite);
+        };
+
+        addLabel('X', new THREE.Vector3(10.5, 0, 0));
+        addLabel('Y', new THREE.Vector3(0, 10.5, 0));
+        addLabel('Z', new THREE.Vector3(0, 0, 10.5));
+
+        // Function to create text sprite
+        function createTextSprite(text) {
+            const canvas = document.createElement('canvas');
+            const context = canvas.getContext('2d');
+            canvas.width = 256;
+            canvas.height = 256;
+            context.font = "Bold 60px Arial";
+            context.fillStyle = "white";
+            context.textAlign = "center";
+            context.fillText(text, 128, 128);
+            
+            const texture = new THREE.CanvasTexture(canvas);
+            const spriteMaterial = new THREE.SpriteMaterial({ map: texture });
+            return new THREE.Sprite(spriteMaterial);
+        }
+
+        // Create nodes
         const nodes = [];
         const nodeGeometry = new THREE.SphereGeometry(0.2, 32, 32);
-        const nodeMaterial = new THREE.MeshBasicMaterial({ color: 0xffffff });
+        const colors = [
+            0xff0000, // Red - Project 1
+            0x00ff00, // Green - Project 2
+            0x0000ff, // Blue - Project 3
+            0xffff00, // Yellow - Project 4
+            0xff00ff  // Magenta - Project 5
+        ];
 
-        for (let i = 0; i < 20; i++) {
+        for (let i = 0; i < 5; i++) {
+            const nodeMaterial = new THREE.MeshBasicMaterial({ color: colors[i] });
             const node = new THREE.Mesh(nodeGeometry, nodeMaterial);
             node.position.set(
-                Math.random() * 10 - 5,
-                Math.random() * 10 - 5,
-                Math.random() * 10 - 5
+                Math.random() * 8 - 4,
+                Math.random() * 8 - 4,
+                Math.random() * 8 - 4
             );
-            node.userData = { isNode: true };
+            node.userData = { isNode: true, id: i + 1 };
             nodes.push(node);
             structure.add(node);
+
+            // Add label
+            const label = createTextSprite(`P${i+1}`);
+            label.position.copy(node.position);
+            label.position.y += 0.3; // Position label above node
+            label.scale.set(0.5, 0.5, 0.5);
+            structure.add(label);
         }
 
         let isDragging = false;
@@ -97,7 +192,6 @@
             previousMousePosition = { x: e.offsetX, y: e.offsetY };
         });
 
-        // Zoom towards mouse position
         renderer.domElement.addEventListener('wheel', (e) => {
             e.preventDefault();
 
@@ -140,7 +234,7 @@
             if (intersects.length > 0) {
                 const clickedNode = intersects[0].object;
                 if (clickedNode.userData.isNode) {
-                    window.open('node.html', '_blank');
+                    window.open(`project${clickedNode.userData.id}.html`, '_blank');
                 }
             }
         });
@@ -158,11 +252,21 @@
         }
         animate();
 
-        // Prevent browser zoom on key combinations
         document.addEventListener('keydown', (e) => {
             if ((e.ctrlKey || e.metaKey) && (e.key === '+' || e.key === '-' || e.key === '0')) {
                 e.preventDefault();
             }
+        });
+
+        // Recenter button functionality
+        const recenterButton = document.getElementById('recenterButton');
+        recenterButton.addEventListener('click', () => {
+            // Reset camera position and rotation
+            camera.position.set(10, 10, 10);
+            camera.lookAt(0, 0, 0);
+            
+            // Reset structure rotation
+            structure.rotation.set(0, 0, 0);
         });
     </script>
 </body>
