--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1 - SamWeb Portfolio</title>
+    <title>LFAP</title>
     <style>
         /* ... (same as template) ... */
     </style>
@@ -11,8 +11,8 @@
 <body>
     <h1>Project 1</h1>
     <div class="project-content">
-        <h2>Interactive Sound Installation</h2>
-        <p>This project explores the intersection of sound and space through an interactive installation. Visitors can manipulate various elements to create unique soundscapes.</p>
+        <h2>Long-Form Audio Player</h2>
+        <p> This is a protest to short-form media consumption. It is a simple audio player that allows the user to 'scrub' through a (theoretically) infinite audio file at (theoretically) any speed. This allows for the consumption of media that is not constrained to reasonable timescales. Long form audio recordings in particular, such as those done by Elliot and I in NYC during AUDIO ERGO SUM, hold endless little treasures in every fold of their waveforms. One must listen to the whole thing to even get close to discovering these. This system aimes to get the listener closer to handling long-form stimulus in a useful or meaningful way. </p>
         <!-- Add more content here as needed -->
     </div>
     <a href="index.html" class="back-link">← Back to Portfolio</a>
