--- a/project1.html
+++ b/project1.html
@@ -3,18 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LFAP</title>
+    <title>Long Form Scrub Skim Player</title>
+    <link rel="stylesheet" href="../css/styles.css">
     <style>
-        /* ... (same as template) ... */
+        body {
+            margin: 0;
+            background-color: black;
+            color: white;
+            font-family: 'Helvetica', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .container {
+            width: 80%;
+            max-width: 1200px;
+            text-align: center;
+            margin: 20px auto;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+        .project-content p {
+            font-size: 1rem;
+            line-height: 1.5;
+            margin-bottom: 20px;
+            text-align: justify;
+        }
+        iframe {
+            width: 100%;
+            height: 600px;
+            border: none;
+        }
+        .back-link {
+            margin-top: 20px;
+            color: white;
+            text-decoration: none;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+        .back-link:hover {
+            color: #888;
+        }
     </style>
 </head>
 <body>
-    <h1>Project 1</h1>
-    <div class="project-content">
-        <h2>Long-Form Audio Player</h2>
-        <p> This is a protest to short-form media consumption. It is a simple audio player that allows the user to 'scrub' through a (theoretically) infinite audio file at (theoretically) any speed. This allows for the consumption of media that is not constrained to reasonable timescales. Long form audio recordings in particular, such as those done by Elliot and I in NYC during AUDIO ERGO SUM, hold endless little treasures in every fold of their waveforms. One must listen to the whole thing to even get close to discovering these. This system aimes to get the listener closer to handling long-form stimulus in a useful or meaningful way. </p>
-        <!-- Add more content here as needed -->
+    <div class="container">
+        <h1>Long Form Scrub Skim Player</h1>
+        <div class="project-content">
+            <h2>Long-Form Audio Player</h2>
+            <p>
+                This is a protest to short-form media consumption. It is a simple audio player that allows the user to 'scrub' through a (theoretically) infinite audio file at (theoretically) any speed. This allows for the consumption of media that is not constrained to reasonable timescales. Long-form audio recordings, such as those done by Elliot and me in NYC during AUDIO ERGO SUM, hold endless little treasures in every fold of their waveforms. One must listen to the whole thing to even get close to discovering these. This system aims to get the listener closer to handling long-form stimulus in a useful or meaningful way.
+            </p>
+        </div>
+        <div class="media">
+            <h2>Interactive Prototype</h2>
+            <iframe 
+                src="https://samueldouma.github.io/infinityplayerprototype1/" 
+                width="100%" 
+                height="600px">
+            </iframe>
+        </div>
+        <a href="index.html" class="back-link">← Back to Portfolio</a>
     </div>
-    <a href="index.html" class="back-link">← Back to Portfolio</a>
 </body>
 </html>
