--- a/project1.html
+++ b/project1.html
@@ -18,36 +18,33 @@
             height: 100vh;
             overflow: hidden;
         }
-        .container {
-            width: 80%;
-            max-width: 1200px;
+        .project-content {
+            position: absolute;
+            top: 20px;
             text-align: center;
-            margin: 20px auto;
+            z-index: 10;
+            width: 100%;
         }
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-        h2 {
+        .project-content h2 {
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
-        .project-content p {
-            font-size: 1rem;
-            line-height: 1.5;
-            margin-bottom: 20px;
-            text-align: justify;
-        }
         iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 600px;
+            height: 100%;
             border: none;
         }
         .back-link {
-            margin-top: 20px;
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
             color: white;
             text-decoration: none;
             font-size: 1rem;
+            z-index: 10;
             transition: color 0.3s ease;
         }
         .back-link:hover {
@@ -56,23 +53,16 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Long Form Scrub Skim Player</h1>
-        <div class="project-content">
-            <h2>Long-Form Audio Player</h2>
-            <p>
-                This is a protest to short-form media consumption. It is a simple audio player that allows the user to 'scrub' through a (theoretically) infinite audio file at (theoretically) any speed. This allows for the consumption of media that is not constrained to reasonable timescales. Long-form audio recordings, such as those done by Elliot and me in NYC during AUDIO ERGO SUM, hold endless little treasures in every fold of their waveforms. One must listen to the whole thing to even get close to discovering these. This system aims to get the listener closer to handling long-form stimulus in a useful or meaningful way.
-            </p>
-        </div>
-        <div class="media">
-            <h2>Interactive Prototype</h2>
-            <iframe 
-                src="https://samueldouma.github.io/infinityplayerprototype1/" 
-                width="100%" 
-                height="600px">
-            </iframe>
-        </div>
-        <a href="index.html" class="back-link">← Back to Portfolio</a>
+    <div class="project-content">
+        <h2>Long-Form Audio Player</h2>
+        <p>
+            This is a protest to short-form media consumption. It is a simple audio player that allows the user to 'scrub' through a (theoretically) infinite audio file at (theoretically) any speed. This allows for the consumption of media that is not constrained to reasonable timescales. Long-form audio recordings, such as those done by Elliot and me in NYC during AUDIO ERGO SUM, hold endless little treasures in every fold of their waveforms. One must listen to the whole thing to even get close to discovering these. This system aims to get the listener closer to handling long-form stimulus in a useful or meaningful way.
+        </p>
     </div>
+    <iframe 
+        src="https://samueldouma.github.io/infinityplayerprototype1/" 
+        allowfullscreen>
+    </iframe>
+    <a href="index.html" class="back-link">← Back to Portfolio</a>
 </body>
 </html>
